--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: _haochuan
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Javascripter || Node.jser || Vimer || Metal(er?)
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: http://haochuanliu.com/wp-content/uploads/2014/02/chua-new_300px1-150x150.png
 
 #
 # Flags below are optional
@@ -18,17 +18,17 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: haochuan.liu@gmail.com
+  facebook: liu.haochuan
   flickr:
-  github: barryclark/jekyll-now
+  github: haochuan
   instagram:
-  linkedin:
+  linkedin: haochuan/en
   pinterest:
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  youtube: channel/UCNESazgvF_NtDAOJrJMNw0g
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
